# omnitrainer

./: .gitignore  README.md  env.example  pyproject.toml
evals/: config.py
evals/audio/: test_cases.py
evals/image/: test_cases.py
evals/text/: test_cases.py
evals/video/: test_cases.py
multimodal_moderation/: env.py  gradio_app.py
multimodal_moderation/agents/: customer_agent.py  image_agent.py  text_agent.py
multimodal_moderation/types/: moderation_result.py
tests/: test_gradio_app.py
